aarch64: Fix mismatched extern "C" block [PR100985]

gcc/ChangeLog:

	PR target/100985
	* config/aarch64/arm_acle.h: Remove unclosed extern "C" block.